--- a/TMSProject/TMSProject/App.config
+++ b/TMSProject/TMSProject/App.config
@@ -2,8 +2,18 @@
 <configuration>
   <configSections>
     <section name="log4net"
-        type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
   </configSections>
+  <connectionStrings>
+    <add name="ConnectionString" connectionString="server=127.0.0.1;user id=root;password=hansol12#$;database=projectslinger;SslMode=none" providerName="MySql.Data.MySqlClient" />
+  </connectionStrings>
+  <appSettings>
+    <add key="dbServer" value="127.0.0.1" />
+    <add key="dbPort" value="3306" />
+    <add key="dbUID" value="root" />
+    <add key="dbPassword" value="hansol12#$" />
+    <add key="dbDatabase" value="projectslinger" />
+  </appSettings>
   <log4net>
     <appender name="RollingFileAppender" type="log4net.Appender.RollingFileAppender">
       <file type="log4net.Util.PatternString" value="%property{LogFileName}.log" />
@@ -21,9 +31,9 @@
       <appender-ref ref="RollingFileAppender" />
     </logger>
   </log4net>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -41,3 +51,4 @@
     </assemblyBinding>
   </runtime>
 </configuration>
+
