--- a/TMSProject/TMSProject/TMSProject.csproj
+++ b/TMSProject/TMSProject/TMSProject.csproj
@@ -188,7 +188,10 @@
     <Compile Include="Classes\Model\Contract.cs" />
     <Compile Include="Classes\Model\ContractMarketPlace.cs" />
     <Compile Include="Classes\Model\Customer.cs" />
+    <Compile Include="Classes\Model\DataGridCarrier.cs" />
+    <Compile Include="Classes\Model\DataGridOrder.cs" />
     <Compile Include="Classes\Model\DataGridRoute.cs" />
+    <Compile Include="Classes\Model\DataGridTracker.cs" />
     <Compile Include="Classes\Model\Employee.cs" />
     <Compile Include="Classes\Model\Invoice.cs" />
     <Compile Include="Classes\Model\Mileage.cs" />
@@ -258,17 +261,11 @@
     <Compile Include="Classes\View\ShippingInfo.xaml.cs">
       <DependentUpon>ShippingInfo.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Classes\View\Test.xaml.cs">
-      <DependentUpon>Test.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Classes\View\TMSAlter.xaml.cs">
       <DependentUpon>TMSAlter.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\View\TripTracker.xaml.cs">
       <DependentUpon>TripTracker.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Classes\View\UserControl1.xaml.cs">
-      <DependentUpon>UserControl1.xaml</DependentUpon>
     </Compile>
     <Compile Include="Classes\View\ViewLogFile.xaml.cs">
       <DependentUpon>ViewLogFile.xaml</DependentUpon>
@@ -276,10 +273,6 @@
     <Compile Include="DBConnect\CMPConfigs.cs" />
     <Compile Include="DBConnect\Configs.cs" />
     <Compile Include="DBConnect\DBHandler.cs" />
-    <Page Include="Classes\View\Test.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
     <Page Include="Classes\View\TMSAlter.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -287,10 +280,6 @@
     <Page Include="Classes\View\TripTracker.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Classes\View\UserControl1.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Classes\View\ViewLogFile.xaml">
       <SubType>Designer</SubType>
