--- a/TMSProject/TMSProject/App.config
+++ b/TMSProject/TMSProject/App.config
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net"
-    type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
   </configSections>
   <connectionStrings>
     <add name="ConnectionString" connectionString="server=127.0.0.1;user id=root;password=hansol12#$;database=projectslinger;SslMode=none" providerName="MySql.Data.MySqlClient" />
